--- a/package.json
+++ b/package.json
@@ -1,18 +1,9 @@
 {
-    "name": "disc-11",
-    "version": "1.50.5",
+    "name": "NeoVocall",
+    "version": "0.1.0",
     "private": true,
-    "description": "A dedicated open-source music bot for Zhycorp based on Jukebox",
-    "homepage": "https://github.com/zhycorp/disc-11#readme",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/zhycorp/disc-11.git"
-    },
-    "bugs": {
-        "url": "https://github.com/zhycorp/disc-11/issues"
-    },
+    "description": "Discord music bot",
     "license": "AGPL-3.0",
-    "author": "Zhycorp <support@zhycorp.com> (https://github.com/zhycorp)",
     "main": "start.js",
     "scripts": {
         "build": "npm run lint && npm run compile",
@@ -61,6 +52,7 @@
         "zlib-sync": "^0.1.7"
     },
     "engines": {
-        "node": "14.x"
+        "node": "14.x",
+        "node": "15.x"
     }
 }
